objects/Tender_Bidding_Companies__c.object
<CustomObject>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <formula>Partner__r.Account_Manager_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>Partner__r.Account_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bidding_Status__c</fullName>
        <description>describes the bidding status of the partner</description>
        <inlineHelpText>Define the current bidding status of the partner</inlineHelpText>
        <label>Bidding Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>active</fullName>
                </value>
                <value>
                    <fullName>lost</fullName>
                </value>
                <value>
                    <fullName>not active</fullName>
                </value>
                <value>
                    <fullName>pulled out</fullName>
                </value>
                <value>
                    <fullName>won</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bidding_Status_changed__c</fullName>
        <label>Bidding Status changed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GAM_Code__c</fullName>
        <formula>Partner__r.GAMCD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAM Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tender Bidding Companies</relationshipLabel>
        <relationshipName>Tender_Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tender__c</fullName>
        <label>Tender</label>
        <referenceTo>Tender__c</referenceTo>
        <relationshipName>Tender_Partners</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Tender Bidding Companies</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TP-{000000}</displayFormat>
        <label>Tender Bidding Companies</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tender Bidding Companies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>